[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "branchlog"
version = "0.1.0"
description = "Track which git branches you've worked on recently."
authors = [
    { name = "Rahman", email = "your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
keywords = ["git", "cli", "branches", "developer-tools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = []

[project.scripts]
branchlog = "branchlog.__main__:main"
